--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,6 +15,12 @@ android {
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+
+        multiDexEnabled true
+
+        packagingOptions {
+            resources.excludes.add("META-INF/*")
+        }
     }
 
     buildTypes {
@@ -63,4 +69,7 @@ dependencies {
 
 //    РСЯ
     implementation 'com.yandex.android:mobileads:5.8.0'
+
+//    Multidex
+//    implementation 'com.android.support:multidex:1.0.3'
 }
