--- a/settings.gradle
+++ b/settings.gradle
@@ -4,6 +4,7 @@ pluginManagement {
         mavenCentral()
         gradlePluginPortal()
         jcenter()
+        maven { url 'https://jitpack.io' }
     }
 }
 dependencyResolutionManagement {
