Градл [^] Апнул версию градл. [^] Апнул версии библиотек. [~] Немного отрефаткорил код. [+] Добавил app-ads.txt.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,14 +5,14 @@ plugins {
 
 android {
     namespace 'ru.plumsoftware.photoeditor'
-    compileSdk 33
+    compileSdk 34
 
     defaultConfig {
         applicationId "ru.plumsoftware.photoeditor"
-        minSdk 16
-        targetSdk 33
-        versionCode 1
-        versionName "1.0"
+        minSdk 21
+        targetSdk 34
+        versionCode 2
+        versionName "1.1"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
 
@@ -30,11 +30,11 @@ android {
         }
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
     }
     kotlinOptions {
-        jvmTarget = '1.8'
+        jvmTarget = '17'
     }
     buildFeatures {
         viewBinding true
@@ -43,13 +43,13 @@ android {
 
 dependencies {
 
-    implementation 'androidx.core:core-ktx:1.10.0'
-    implementation 'androidx.appcompat:appcompat:1.6.1'
-    implementation 'com.google.android.material:material:1.9.0'
+    implementation 'androidx.core:core-ktx:1.13.1'
+    implementation 'androidx.appcompat:appcompat:1.7.0'
+    implementation 'com.google.android.material:material:1.12.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+    androidTestImplementation 'androidx.test.ext:junit:1.2.1'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.6.1'
 
 //    Scalable size unit
     implementation 'com.intuit.sdp:sdp-android:1.1.0'
@@ -62,13 +62,13 @@ dependencies {
     implementation 'jp.co.cyberagent.android:gpuimage:2.1.0'
 
 //    Koin
-    implementation 'org.koin:koin-androidx-viewmodel:2.0.0'
+    implementation 'io.insert-koin:koin-android:3.5.6'
 
 //    View model
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.6.1'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.8.5'
 
 //    РСЯ
-    implementation 'com.yandex.android:mobileads:5.8.0'
+    implementation 'com.yandex.android:mobileads:7.4.0'
 
 //    Multidex
 //    implementation 'com.android.support:multidex:1.0.3'
